Fix nav spacing under articles. I genuinely think I didn't know how to do 'justify-content' when I wrote this theme so many years ago.

--- a/jekyll/css/sixthree.css
+++ b/jekyll/css/sixthree.css
@@ -235,6 +235,7 @@ section.h-feed article {
 section.h-feed nav,
 article.h-entry nav {
   display: flex;
+  justify-content: space-between;
 }
 
 section.h-feed nav a,
